# writee

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
apps/android/: Cargo.toml  README.md
apps/android/src/: lib.rs
apps/desktop/: Cargo.toml  writee.desktop
apps/desktop/scripts/: build-appimage.sh
apps/desktop/src/: main.rs
crates/writee-app/: Cargo.toml
crates/writee-app/src/: geometry.rs  icon.rs  lib.rs  markdown.rs  md_shortcuts.rs  palette.rs  recovery.rs  search.rs  settings.rs  tags.rs  tool.rs  ui.rs  undo.rs  workspace.rs
crates/writee-core/: Cargo.toml
crates/writee-core/src/: arrow.rs  document.rs  geom.rs  lib.rs  link.rs  one_euro.rs  shape.rs  storage.rs  stroke.rs  subnote.rs  tessellate.rs  textbox.rs  theme.rs
crates/writee-export-web/: Cargo.toml
crates/writee-export-web/src/: lib.rs  markdown.rs
crates/writee-input/: Cargo.toml
crates/writee-input/src/: lib.rs  linux_tablet.rs  macos_tablet.rs  winit_adapter.rs
crates/writee-render/: Cargo.toml
crates/writee-render/src/: egui_pass.rs  grid.rs  image.rs  ink.rs  lib.rs  text.rs  viewport.rs
crates/writee-render/src/shaders/: grid.wgsl  image.wgsl  ink.wgsl
viewer-template/: app.css  app.js  index.html
