[package]
name = "writee-android"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "writee_android"
crate-type = ["cdylib"]

[dependencies]
writee-app = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
android_logger = { workspace = true }

# Metadata used by `cargo apk` / `xbuild`.
[package.metadata.android]
package = "dev.writee.writee"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
runtime_libs = "."

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
max_sdk_version = 28

[[package.metadata.android.uses_feature]]
name = "android.hardware.faketouch"
required = true
