[package]
name = "writee-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
writee-core = { workspace = true }
writee-render = { workspace = true }
writee-input = { workspace = true }
writee-export-web = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
directories-next = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
pulldown-cmark = { workspace = true }
fs2 = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
rfd = { workspace = true }
