[package]
name = "writee-input"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc / cocoa go here when macos_tablet.rs is filled in. The stub doesn't
# need them yet.
